Site/VMwindows/azuredeploy.parameters.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentParameters.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "value": "canadacentral"
    },
    "networkInterfaceName1": {
      "value": "vm1164_z1"
    },
    "enableAcceleratedNetworking": {
      "value": true
    },
    "networkSecurityGroupName": {
      "value": "VM1-nsg"
    },
    "networkSecurityGroupRules": {
      "value": [
        {
          "name": "RDP",
          "properties": {
            "priority": 300,
            "protocol": "TCP",
            "access": "Allow",
            "direction": "Inbound",
            "sourceAddressPrefix": "*",
            "sourcePortRange": "*",
            "destinationAddressPrefix": "*",
            "destinationPortRange": "3389"
          }
        },
        {
          "name": "HTTP",
          "properties": {
            "priority": 320,
            "protocol": "TCP",
            "access": "Allow",
            "direction": "Inbound",
            "sourceAddressPrefix": "*",
            "sourcePortRange": "*",
            "destinationAddressPrefix": "*",
            "destinationPortRange": "80"
          }
        }
      ]
    },
    "subnetName": {
      "value": "default"
    },
    "virtualNetworkName": {
      "value": "VM1-vnet"
    },
    "addressPrefixes": {
      "value": [
        "10.0.0.0/16"
      ]
    },
    "subnets": {
      "value": [
        {
          "name": "default",
          "properties": {
            "addressPrefix": "10.0.0.0/24"
          }
        }
      ]
    },
    "publicIpAddressName1": {
      "value": "VM1-ip"
    },
    "publicIpAddressName2": {
      "value": "public-ip"
    },
    "publicIpAddressType": {
      "value": "Static"
    },
    "publicIpAddressSku": {
      "value": "Standard"
    },
    "pipDeleteOption": {
      "value": "Detach"
    },
    "virtualMachineName": {
      "value": "VM1"
    },
    "virtualMachineName1": {
      "value": "VM1"
    },
    "virtualMachineComputerName1": {
      "value": "VM1"
    },
    "virtualMachineRG": {
      "value": "Guro"
    },
    "osDiskType": {
      "value": "StandardSSD_LRS"
    },
    "osDiskDeleteOption": {
      "value": "Delete"
    },
    "virtualMachineSize": {
      "value": "Standard_DS1_v2"
    },
    "nicDeleteOption": {
      "value": "Detach"
    },
    "hibernationEnabled": {
      "value": false
    },
    "adminUsername": {
      "value": "vmadmin"
    },
    "adminPassword": {
      "value": null
    },
    "patchMode": {
      "value": "AutomaticByPlatform"
    },
    "enableHotpatching": {
      "value": true
    },
    "rebootSetting": {
      "value": "IfRequired"
    },
    "securityType": {
      "value": "TrustedLaunch"
    },
    "secureBoot": {
      "value": true
    },
    "vTPM": {
      "value": true
    },
    "virtualMachine1Zone": {
      "value": "1"
    },
    "FileName": {
      "value": ""
    },
    "FileURI": {
      "value": ""
    },
    "virtualNetworkId": {
      "value": "/subscriptions/167fcb55-1d31-4096-90a8-f9e0a30d3853/resourcegroups/TP1Deploiement/providers/Microsoft.Network/virtualNetworks/TP1-vnet"
    },
    "networkSecurityGroups": {
      "value": [
        {
          "name": "basicNsgTP1-vnet",
          "id": "/subscriptions/167fcb55-1d31-4096-90a8-f9e0a30d3853/resourceGroups/TP1Deploiement/providers/Microsoft.Network/networkSecurityGroups/basicNsgTP1-vnet",
          "rules": [
            {
              "name": "Tcp",
              "properties": {
                "priority": 300,
                "protocol": "Tcp",
                "access": "Allow",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "80"
              }
            }
          ]
        }
      ]
    },
    "networkInterfaceConfigurations": {
      "value": [
        {
          "name": "TP1-vnet-sub1",
          "primary": true,
          "subnetId": "/subscriptions/167fcb55-1d31-4096-90a8-f9e0a30d3853/resourceGroups/TP1Deploiement/providers/Microsoft.Network/virtualNetworks/TP1-vnet/subnets/default",
          "applicationGatewayBackendAddressPools": [],
          "loadBalancerBackendAddressPools": [
            {
              "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancerName'), parameters('backendPoolName'))]"
            }
          ],
          "applicationSecurityGroups": [],
          "loadBalancerInboundNatPools": [],
          "enableAcceleratedNetworking": false,
          "nsgName": "basicNsgTP1-vnet",
          "nsgId": "/subscriptions/167fcb55-1d31-4096-90a8-f9e0a30d3853/resourceGroups/TP1Deploiement/providers/Microsoft.Network/networkSecurityGroups/basicNsgTP1-vnet",
          "pipName": "publicIp-TP1-vnet"
        }
      ]
    },
    "backendPoolName": {
      "value": "bepool"
    },
    "loadBalancerName": {
      "value": "alb"
    },
    "loadbalancingRuleFrontEndPort": {
      "value": 80
    },
    "loadbalancingRuleBackendEndPort": {
      "value": 80
    },
    "loadbalancingRuleProtocol": {
      "value": "Tcp"
    },
    "InboundNATRuleFrontEndPortRangeStart": {
      "value": 50000
    },
    "vmName": {
      "value": "VMss1"
    },
    "virtualMachineScaleSetName": {
      "value": "VMss1"
    },
    "instanceCount": {
      "value": "2"
    },
    "instanceSize": {
      "value": "Standard_DS1_v2"
    },
    "platformFaultDomainCount": {
      "value": "1"
    },
    "scaleInPolicy": {
      "value": {
        "rules": [
          "Default"
        ],
        "forceDeletion": false
      }
    },
    "upgradePolicy": {
      "value": "Manual"
    }
  }
}
